--- a/src/resources/postcss/views/skeleton/_single-event.pcss
+++ b/src/resources/postcss/views/skeleton/_single-event.pcss
@@ -13,7 +13,11 @@
 	
 	/* Back navigation block */
 	.tribe-events-back {
-		margin-bottom: var(--spacer-7);
+		margin-bottom: var(--spacer-5);
+		
+		@media (--viewport-medium) {
+			margin-bottom: var(--spacer-8);
+		}
 	}
 	
 	/* Header metadata wrapper  */
@@ -27,7 +31,7 @@
 		@media (--viewport-medium) {
 			align-items: baseline;
 			flex-wrap: nowrap;
-			margin: var(--spacer-4) 0 var(--spacer-7);
+			margin: var(--spacer-5) 0 var(--spacer-7);
 		}
 	}
 	
